--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,71 @@
 *.pyc
 .env
 dist
+.venv/Lib/site-packages/charset_normalizer/md.cp311-win_amd64.pyd
+.venv/Lib/site-packages/charset_normalizer/md__mypyc.cp311-win_amd64.pyd
+.venv/Lib/site-packages/debugpy/_vendored/pydevd/_pydevd_bundle/pydevd_cython.cp311-win_amd64.pyd
+.venv/Lib/site-packages/debugpy/_vendored/pydevd/pydevd_attach_to_process/attach_amd64.dll
+.venv/Lib/site-packages/numpy.libs/libopenblas64__v0.3.23-293-gc2f4bdbb-gcc_10_3_0-2bde3a66a51006b2b53eb373ff767a3f.dll
+.venv/Lib/site-packages/numpy/core/_multiarray_tests.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/core/_multiarray_umath.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/fft/_pocketfft_internal.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/linalg/_umath_linalg.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/random/_bounded_integers.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/random/_common.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/random/_generator.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/random/_mt19937.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/random/_pcg64.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/random/_philox.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/random/_sfc64.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/random/bit_generator.cp311-win_amd64.pyd
+.venv/Lib/site-packages/numpy/random/mtrand.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas.libs/msvcp140-a4c2229bdc2a2a630acdc095b4d86008.dll
+.venv/Lib/site-packages/pandas/_libs/algos.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/arrays.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/groupby.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/hashing.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/hashtable.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/index.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/indexing.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/internals.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/interval.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/join.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/json.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/lib.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/missing.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/ops.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/ops_dispatch.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/pandas_datetime.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/pandas_parser.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/parsers.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/properties.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/reshape.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/sparse.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/testing.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslib.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/base.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/ccalendar.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/conversion.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/dtypes.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/fields.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/nattype.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/np_datetime.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/offsets.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/parsing.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/period.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/strptime.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/timedeltas.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/timestamps.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/timezones.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/tzconversion.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/tslibs/vectorized.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/window/aggregations.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/window/indexers.cp311-win_amd64.pyd
+.venv/Lib/site-packages/pandas/_libs/writers.cp311-win_amd64.pyd
+.venv/Lib/site-packages/psutil/_psutil_windows.pyd
+.venv/Lib/site-packages/pydantic_core/_pydantic_core.cp311-win_amd64.pyd
+.venv/Lib/site-packages/regex/_regex.cp311-win_amd64.pyd
+.venv/Lib/site-packages/tls_client/dependencies/tls-client-64.dll
+.venv/Lib/site-packages/tornado/speedups.pyd
+.venv/Lib/site-packages/zmq/backend/cython/_zmq.cp311-win_amd64.pyd
+.venv/Scripts/python.exe
